Fix levelUpImage class on Firefox

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -477,7 +477,7 @@ FLASHCARDS
 }
 
 .levelUpImage {
-    height: 30%;
+    height: 40vh;
 }
 
 .skip-tutorial-button {
